# wayWallChooser

./: AppTheme.qml  CMakeLists.txt  Main.qml  README.md  assets.qrc  imagecontrol.cpp  imagecontrol.h  main.cpp  settings.cpp  settings.h  themeclass.cpp  themeclass.h
